pi-parser/tests/snapshots/expr__parse_basic_literals_b2_int_neg.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  IntLit:
    negative:
      node: true
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    signed: true
    bits: 32
    val:
      node: 81
      span:
        range:
          start: 1
          end: 10
        file_id: 0
span:
  range:
    start: 0
    end: 10
  file_id: 0

