pi-parser/tests/snapshots/expr__parse_basic_literals_float_sep.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  FloatLit:
    negative:
      node: false
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    bits: 32
    val:
      node: 1.0
      span:
        range:
          start: 0
          end: 7
        file_id: 0
span:
  range:
    start: 0
    end: 7
  file_id: 0

